imege fixes on smaller screena

--- a/style.css
+++ b/style.css
@@ -924,7 +924,7 @@ div.project-container{
     background-color: var(--blue);
 
     max-width:100%;
-    height:60vh;
+    max-height:60vh;
 
     overflow: hidden;
 }
@@ -1030,7 +1030,7 @@ img.project-main {
 }
 
 .gallery-site{
-    height:260px;
+    max-height:260px;
     width:30%;
     background-color:var(--blue);
     margin-bottom:30px;
@@ -1083,7 +1083,7 @@ img.project-main {
 
 .full-width-img{
     width:100%;
-    height:60vh;
+    max-height:60vh;
 
     margin-bottom: 50px;
 
@@ -1142,7 +1142,7 @@ img.project-main {
 
 .full-img{
 
-    height: 100vh;
+    max-height: 100vh;
     display:flex;
     justify-content:center;
     align-content:center;
@@ -1153,7 +1153,7 @@ img.project-main {
 
 .full-img .img-frame{
     width:75vw;
-    height:70vh;
+    max-height:70vh;
 
     position:absolute;
 
